Fix some minor alignment issues.

--- a/admin/themes/default/css/style.css
+++ b/admin/themes/default/css/style.css
@@ -1533,7 +1533,6 @@ header nav {
 #outputs #output-format-list {
     display: inline-block;
     margin: 0;
-    padding: 20px 0;
 }
 
     #outputs #output-format-list li { display: inline-block; }
